# financ_statistics

./: .dockerignore  .env.example  .gitignore  README.md  app.dockerfile  docker-compose.yml  main.py  pyproject.toml
migration/: env.py
migration/versions/: ef4f78377c20_init.py
src/config/: logger_.py  settings.py
src/database/: base.py  models.py  session.py
src/logic/: download_xlxs.py  extract_from_xlxs.py  uploading_data.py
src/schemas/: statistic.py
src/tests/: test_download.py  test_extract.py  test_uploading.py
