[tool.poetry]
name = "financ-statistics"
version = "0.1.0"
description = ""
authors = ["Keni13-Coder <vladmoldovanov03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.0"
selenium = "^4.29.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.38"
apscheduler = "^3.11.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytz = "^2025.1"
alembic = "^1.14.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_marker = "asyncio"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v -s --tb=short"
markers = [
    "asyncio: marks tests as asyncio (deselect with '-m \"not asyncio\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]